{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 29,
  "lineage": "d5fa70c0-228f-9bdb-0767-cd0005e11dc6",
  "resources": [
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:140592727911:security-group/sg-0717b115de13cd765",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0717b115de13cd765",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "finalproject-ivolve-endpoints-sg",
            "name_prefix": "",
            "owner_id": "140592727911",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09d7c97782ddd8c9b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140592727911",
            "id": "sg-0717b115de13cd765",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:140592727911:vpc-endpoint/vpce-07d7779ff91153b7f",
            "dns_entry": [
              {
                "dns_name": "vpce-07d7779ff91153b7f-xoen53gn.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-07d7779ff91153b7f-xoen53gn-eu-central-1b.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-07d7779ff91153b7f-xoen53gn-eu-central-1a.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "api.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z0372544O4T82A4EFIJE"
              },
              {
                "dns_name": "ecr.eu-central-1.api.aws",
                "hosted_zone_id": "Z00509157494L9QMN0C6"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07d7779ff91153b7f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02a28d3f041bf53b9",
              "eni-03c91975da6ef3821"
            ],
            "owner_id": "140592727911",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-central-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0717b115de13cd765"
            ],
            "service_name": "com.amazonaws.eu-central-1.ecr.api",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.246",
                "subnet_id": "subnet-06545eba5a0433a66"
              },
              {
                "ipv4": "10.0.4.34",
                "subnet_id": "subnet-070767f82e9482f58"
              }
            ],
            "subnet_ids": [
              "subnet-06545eba5a0433a66",
              "subnet-070767f82e9482f58"
            ],
            "tags": {
              "Name": "finalproject-ivolve-ecr-api-endpoint"
            },
            "tags_all": {
              "Name": "finalproject-ivolve-ecr-api-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09d7c97782ddd8c9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140592727911",
            "id": "vpce-07d7779ff91153b7f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.endpoints.aws_security_group.endpoint_sg",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094728807d9c65c53",
            "arn": "arn:aws:ec2:eu-central-1:140592727911:elastic-ip/eipalloc-094728807d9c65c53",
            "domain": "vpc",
            "id": "eipalloc-094728807d9c65c53",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-66-184-217.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.66.184.217",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d65039e8a12f5c05",
            "arn": "arn:aws:ec2:eu-central-1:140592727911:elastic-ip/eipalloc-0d65039e8a12f5c05",
            "domain": "vpc",
            "id": "eipalloc-0d65039e8a12f5c05",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-193-252-17.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.193.252.17",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:140592727911:internet-gateway/igw-00baad9dc0a462b37",
            "id": "igw-00baad9dc0a462b37",
            "owner_id": "140592727911",
            "region": "eu-central-1",
            "tags": {
              "Name": "finalproject-ivolve-igw"
            },
            "tags_all": {
              "Name": "finalproject-ivolve-igw"
            },
            "vpc_id": "vpc-09d7c97782ddd8c9b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094728807d9c65c53",
            "association_id": "eipassoc-0fadb0b05512e3112",
            "connectivity_type": "public",
            "id": "nat-0be3345e4d5e47e76",
            "network_interface_id": "eni-0a291b39dbcefc116",
            "private_ip": "10.0.1.202",
            "public_ip": "3.66.184.217",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b8b7a65078106967"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d65039e8a12f5c05",
            "association_id": "eipassoc-0452a312dc0fb70c4",
            "connectivity_type": "public",
            "id": "nat-073196ec506647e76",
            "network_interface_id": "eni-07e88503e56a3d713",
            "private_ip": "10.0.2.70",
            "public_ip": "18.193.252.17",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-069cd645682c88f0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:140592727911:route-table/rtb-00d82587761049bb8",
            "id": "rtb-00d82587761049bb8",
            "owner_id": "140592727911",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0be3345e4d5e47e76",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "finalproject-ivolve-private-rt-1"
            },
            "tags_all": {
              "Name": "finalproject-ivolve-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d7c97782ddd8c9b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140592727911",
            "id": "rtb-00d82587761049bb8",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:140592727911:route-table/rtb-0c3533607ee538949",
            "id": "rtb-0c3533607ee538949",
            "owner_id": "140592727911",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-073196ec506647e76",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "finalproject-ivolve-private-rt-2"
            },
            "tags_all": {
              "Name": "finalproject-ivolve-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d7c97782ddd8c9b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140592727911",
            "id": "rtb-0c3533607ee538949",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:140592727911:route-table/rtb-0b3c945e55aa235e0",
            "id": "rtb-0b3c945e55aa235e0",
            "owner_id": "140592727911",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00baad9dc0a462b37",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "finalproject-ivolve-public-rt"
            },
            "tags_all": {
              "Name": "finalproject-ivolve-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d7c97782ddd8c9b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140592727911",
            "id": "rtb-0b3c945e55aa235e0",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0382e948fd4b7e21a",
            "region": "eu-central-1",
            "route_table_id": "rtb-00d82587761049bb8",
            "subnet_id": "subnet-06545eba5a0433a66"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009e6b82ad594f21b",
            "region": "eu-central-1",
            "route_table_id": "rtb-0c3533607ee538949",
            "subnet_id": "subnet-070767f82e9482f58"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e49e9c166713d2a",
            "region": "eu-central-1",
            "route_table_id": "rtb-0b3c945e55aa235e0",
            "subnet_id": "subnet-0b8b7a65078106967"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e174418386ba1f37",
            "region": "eu-central-1",
            "route_table_id": "rtb-0b3c945e55aa235e0",
            "subnet_id": "subnet-069cd645682c88f0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:140592727911:subnet/subnet-06545eba5a0433a66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06545eba5a0433a66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140592727911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "finalproject-ivolve-private-1"
            },
            "tags_all": {
              "Name": "finalproject-ivolve-private-1"
            },
            "vpc_id": "vpc-09d7c97782ddd8c9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140592727911",
            "id": "subnet-06545eba5a0433a66",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:140592727911:subnet/subnet-070767f82e9482f58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070767f82e9482f58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140592727911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "finalproject-ivolve-private-2"
            },
            "tags_all": {
              "Name": "finalproject-ivolve-private-2"
            },
            "vpc_id": "vpc-09d7c97782ddd8c9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140592727911",
            "id": "subnet-070767f82e9482f58",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:140592727911:subnet/subnet-0b8b7a65078106967",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8b7a65078106967",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140592727911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "finalproject-ivolve-public-1"
            },
            "tags_all": {
              "Name": "finalproject-ivolve-public-1"
            },
            "vpc_id": "vpc-09d7c97782ddd8c9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140592727911",
            "id": "subnet-0b8b7a65078106967",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:140592727911:subnet/subnet-069cd645682c88f0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069cd645682c88f0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140592727911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "finalproject-ivolve-public-2"
            },
            "tags_all": {
              "Name": "finalproject-ivolve-public-2"
            },
            "vpc_id": "vpc-09d7c97782ddd8c9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140592727911",
            "id": "subnet-069cd645682c88f0e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:140592727911:vpc/vpc-09d7c97782ddd8c9b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0833d040291d59e4b",
            "default_route_table_id": "rtb-007d5f8ee6f2375b3",
            "default_security_group_id": "sg-0dfcebd522541fc0c",
            "dhcp_options_id": "dopt-0b5183eeb717fd887",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d7c97782ddd8c9b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-007d5f8ee6f2375b3",
            "owner_id": "140592727911",
            "region": "eu-central-1",
            "tags": {
              "Name": "finalproject-ivolve-vpc"
            },
            "tags_all": {
              "Name": "finalproject-ivolve-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140592727911",
            "id": "vpc-09d7c97782ddd8c9b",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}